--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = baseproject
+PRODUCT_NAME = webview_test
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.MasterAppUniversity.baseproject
+PRODUCT_BUNDLE_IDENTIFIER = com.masterClaa.webviewTest
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.MasterAppUniversity. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.masterClaa. All rights reserved.
